Add support for a tool model first modifier to be forced
This is not useful for normal models that just add a texture (at that point just add it directly to the tool), but is useful for custom model types like material or tank
Also fixes what looked like a possible NPE if a modifier model had only one of small and large base textures and allow tank modifier models with only fluid (both needed for this new feature)